k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-app
  namespace: argo-app
spec:
  selector:
    matchLabels:
      app: argo-app
  template:
    metadata:
      labels:
        app: argo-app
    spec:
      containers:
      - name: argo-app
        image: vimalr/argo-app:b1a85ed4a8e0dbc590b9f6a05691b03d6dc181f0
        ports:
        - containerPort: 80
