k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-app-service
spec:
  selector:
    app: argo-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
