k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: githubactions-aks-demo-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:  
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: githubactions-aks-demo-service
          servicePort: 80
